--------------------------------------------------------------------------------
Changes for 1.9.2

New features:
 - [ZBX-3355] added character field length validation on inserts and updates (KB)
 - [ZBX-3370] updated Russian translation; thanks to zalex_ua and dotneft (Richlv)
 - [ZBX-3338] updated Ukrainian translation; thanks to zalex_ua (Richlv)

Bug fixes:
 - [ZBX-3367] fixed PHP Fatal error when trying to create screen (Vlad)
 - [ZBX-3354] fixed history clearing (Vlad)
 - [ZBX-3360] fixed add simple graph to screen (Vlad)
 - [ZBX-3189] fixed trigger dependencies broken (Vlad)
 - [ZBX-3326] sort po file contents and entries in POTFILES.in, include fuzzy entries in mo files (Richlv)
 - [ZBX-3054] fixed Cannot create or update Action with remote command; fix "reset() expects parameter 1 to be array, null given in /actionconf.php:754" (Vlad)

--------------------------------------------------------------------------------
Changes for 1.9.1

New features:
 - [ZBXNEXT-587] added support of multiple host interfaces (Aly,Sasha,Vedmak,asaveljevs)
 - [ZBXNEXT-564] added new {IPADDRESS} and {HOST.PORT} macros in auto registration notifications (Sasha)
 - [ZBXNEXT-556] zabbix frontend translations are now handled by PHP gettext module (KB)
 - [ZBXNEXT-558] added support of monitoring auto-registered hosts with passive checks (Sasha)
 - [ZBXNEXT-512] redesign of unknown events (Aly,asaveljevs,Sasha)

Bug fixes:
 - [ZBX-3241] fixed incorrectly shortened popup texts (Vlad)
 - [ZBX-2647] Made some of hard coded strings translatable (KB)
 - [ZBX-3300] fixed valuemapid not removed from items table when valuemap deleted (Vedmak)
 - [ZBXNEXT-588] improved template, host, proxy form view, dashboard screen (Aly,Vedmak)
 - [ZBX-3149] allow to translate more strings in screen element 'Server info'; add support for translator comments (Richlv)
 - [ZBX-3248] fixed empty and duplicate map URL name handling (KB)